# iteboshi-app

./: package.json  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  dialog.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  multilingual.rs  recorder.rs  transcription.rs
src/components/: BaseButton.vue  StatusIndicator.vue
src/router/: index.ts
src/views/: HomeView.vue
