[package]
name = "iteboshi"
version = "0.1.0"
description = "Whisper for Tauri"
authors = ["kiritan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iteboshi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }

tokio = { version = "1", features = ["full"] } # 使用 Tokio 运行时, 包含 mpsc 等
rodio = "0.17"                                 # 音频播放和捕获库
hound = "3.5"                                  # WAV 文件读写库

[features]
