[package]
name = "iteboshi"
version = "0.1.0"
description = "Whisper for Tauri"
authors = ["kiritan"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iteboshi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

tokio = { version = "1", features = ["rt", "macros", "time", "sync"] } # 添加 sync feature
parking_lot = "0.12"
crossbeam-channel = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

rodio = { version = "0.20", features = ["symphonia-all"] }
hound = "3.5"
rubato = "0.16"

thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

candle-core = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8" }
candle-transformers = { version = "0.8" }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", features = ["tokio"] }

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
